duniverse/cstruct.5.1.1/ppx_test/errors/cstruct_not_an_identifier.ml
[%%cstruct
  type t = {
    a : uint8_t list
  }
  [@@little_endian]
]
